# 24GHz-Radar-firmware

./: .project  LICENSE  README.md  ReadMe.txt
Binary/: ReadMe.txt  S2GLP_Pulsed_Doppler.hex
Communication Library/ComLib_C_Interface/examples/S2GLP_basics/: CMakeLists.txt  commlib24_S2GLP_basics.c
Communication Library/ComLib_C_Interface/include/: COMPort.h  EndpointRadarBaseBoard.h  EndpointRadarDeviceStatus.h  EndpointRadarErrorCodes.h  EndpointRadarS2GLP.h  Introduction.dox  Protocol.h  radar_common.h
Communication Library/ComLib_C_Interface/src/: COMPort_Unix.c  COMPort_Windows.c  EndpointRadarBaseBoard.c  EndpointRadarDeviceStatus.c  EndpointRadarErrorCodes.c  EndpointRadarS2GLP.c  Protocol.c  Protocol_KnownEndpoints.h  Protocol_internal.h
Communication Library/ComLib_Matlab_Interface/RadarSystem/: findRSPort.m  myQueue.m  protocol_read_payload_int8.m  protocol_read_payload_str.m  protocol_write_payload_float.m  protocol_write_payload_int8.m
DAVE project/: ReadMe.txt
DAVE project/S2GLP_Pulsed_Doppler/: .cproject  .project  ReadMe.txt  config.h  config_error.h  linker_script.ld  main.c  version.h
DAVE project/S2GLP_Pulsed_Doppler/.metadata/: version.ini
DAVE project/S2GLP_Pulsed_Doppler/Dave/: .dconfig
DAVE project/S2GLP_Pulsed_Doppler/Standard/: S2GLP_Pulsed_Doppler.elf  S2GLP_Pulsed_Doppler.hex  S2GLP_Pulsed_Doppler.lst  S2GLP_Pulsed_Doppler.map  main.d  (+5 more)
Power_Consumption_Calculator/: S2GLP_power_consumption.m
Radar_GUI_Configs/: RadarGUI_Config_S2GLP_Default.xml  RadarGUI_Config_S2GLP_High_Performance.xml  RadarGUI_Config_S2GLP_Low_Power.xml
(+467 files in other folders)
